--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -8,4 +8,4 @@ services:
     ports:
       - 8080:8080
     environment:
-      - BATTLELOG_URL=https://battlelog.battlefield.com/bf4/fr/warsawoverviewpopulate/${PLAYER_ID}/1
+      - BATTLELOG_PLAYER_ID=${PLAYER_ID}
